# torpaste

./: .gitignore  README.md
core/: Cargo.toml
core/src/: config.rs  crypto.rs  lib.rs  main.rs  protocol.rs  storage.rs  tor_manager.rs
docs/: ARCHITECTURE.md  BUILD.md
platform/android/: README.md
platform/desktop/: README.md
platform/ios/: README.md
scripts/: build.sh
ui/: pubspec.yaml
ui/lib/: main.dart
ui/lib/blocs/: chat_bloc.dart  contacts_bloc.dart  tor_bloc.dart
ui/lib/models/: models.dart
ui/lib/screens/: add_contact_screen.dart  chat_screen.dart  home_screen.dart  identity_screen.dart  settings_screen.dart  splash_screen.dart
ui/lib/services/: chat_service.dart  pastebin_service.dart  storage_service.dart  tor_service.dart
ui/lib/utils/: theme.dart
ui/lib/widgets/: contact_list_item.dart  message_bubble.dart  tor_status_indicator.dart
