[package]
name = "torchat_paste_core"
version = "0.2.0"
edition = "2021"
authors = ["TorChat-Paste Team"]
description = "Core library for TorChat-Paste - Anonymous P2P Messenger"

[dependencies]
tokio = { version = "1", features = ["full"] }
tor-rtcompat = { version = "0.21", features = ["tokio"] }
arti-client = { version = "0.21", features = ["onion-service-service"] }
tokio-socks = "0.5"
axum = "0.7"
hyper = { version = "0.14", features = ["server", "tcp"] }
http = "0.2"
futures = "0.3"
sodiumoxide = "0.2.7"
base64 = "0.21"
hex = "0.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = "0.4"
dirs = "5.0"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
