[package]
name = "torchat_paste_core"
version = "0.3.0"
edition = "2021"
authors = ["TorChat-Paste Team"]

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
# --- Tor (Arti) ---
arti-client = { version = "0.27.0", features = ["tokio", "rustls", "onion-service-service", "onion-service-client"] }
tor-rtcompat = { version = "0.27.0", features = ["tokio", "rustls"] }
tor-hsservice = "0.27.0"
tor-cell = "0.27.0"

# --- Async Runtime ---
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
# CRÍTICO: 'compat' permite converter Futures <-> Tokio
tokio-util = { version = "0.7", features = ["compat"] }

# --- Web Server ---
hyper = { version = "0.14", features = ["full", "server", "http1", "stream"] }
axum = { version = "0.6", features = ["headers"] }
tower = { version = "0.4", features = ["util"] }

# --- Crypto & Utils ---
sodiumoxide = "0.2.7"
rand = "0.8"
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
qrcode = { version = "0.12", default-features = false, features = ["svg", "image"] }
